--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-04 Sat 06:22 -->
+<!-- 2022-06-04 Sat 06:36 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -60,7 +60,7 @@
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org4231bed">makefile</a></li>
+<li><a href="#org7a04f8e">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -255,12 +255,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org69ca15a">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org9d2c908">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="orgfec907e">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org46043f3">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -320,7 +320,7 @@ fi
 <div class="org-src-container">
 <pre><code class="language-sh match-braces rainbow-braces">chmod +x $bootstrap
 if hash nix 2&gt; /dev/null; then
-    $bootstrap $@ || echo "Sorry; something happened! Please try again!"
+    $bootstrap $@
 else
     read -p $'Install nix?\n' installNix &lt; /dev/tty
     if [ "$installNix" == "y" ] || [ "$installNix" == "yes" ]; then
@@ -358,7 +358,7 @@ else
                 chmod +x $tailapiGit/tailapi.py
                 ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
             fi
-            hy $bootstrap $@ || echo "Sorry; something happened! Please try again!"
+            hy $bootstrap $@
         fi
     fi
 fi
@@ -368,9 +368,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org4231bed" class="outline-2">
-<h2 id="org4231bed">makefile</h2>
-<div class="outline-text-2" id="text-org4231bed">
+<div id="outline-container-org7a04f8e" class="outline-2">
+<h2 id="org7a04f8e">makefile</h2>
+<div class="outline-text-2" id="text-org7a04f8e">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -400,7 +400,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-04 Sat 06:22</p>
+<p class="date">Created: 2022-06-04 Sat 06:36</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
