--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-04 Sat 06:36 -->
+<!-- 2022-06-06 Mon 02:03 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -60,7 +60,7 @@
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#org7a04f8e">makefile</a></li>
+<li><a href="#orgf7972d3">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -255,12 +255,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org9d2c908">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org4a3b192">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org46043f3">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="org4fd5b60">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -334,6 +334,9 @@ else
     set +eo pipefail
     if ! $bootstrap $@; then
         set -eo pipefail
+        if [ "$(uname -o)" == "Android" ]; then
+            termux-setup-storage
+        fi
         read -p $'Nix-shell bootstrap failed; try again after installing dependencies?\n' installDeps &lt; /dev/tty
         if [ "$installDeps" == "y" ] || [ "$installDeps" == "yes" ]; then
             pacapt="$HOME/.local/share/syvl/pacapt"
@@ -356,7 +359,12 @@ else
                 tailapiGit="$HOME/.local/share/tailapi.git"
                 git clone https://github.com/syvlorg/tailapi.git $tailapiGit || git -C $tailapiGit pull origin main
                 chmod +x $tailapiGit/tailapi.py
-                ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
+                if [ "$(uname -o)" == "Android" ]; then
+                    ln -sf $tailapiGit/tailapi.py /data/data/com.termux/files/usr/bin/tailapi
+                else
+                    $pacapt -Syyu tailscale
+                    ln -sf $tailapiGit/tailapi.py /usr/local/bin/tailapi
+                fi
             fi
             hy $bootstrap $@
         fi
@@ -368,9 +376,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-org7a04f8e" class="outline-2">
-<h2 id="org7a04f8e">makefile</h2>
-<div class="outline-text-2" id="text-org7a04f8e">
+<div id="outline-container-orgf7972d3" class="outline-2">
+<h2 id="orgf7972d3">makefile</h2>
+<div class="outline-text-2" id="text-orgf7972d3">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -400,7 +408,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-04 Sat 06:36</p>
+<p class="date">Created: 2022-06-06 Mon 02:03</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
