--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-12 Sun 19:30 -->
+<!-- 2022-06-14 Tue 05:22 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,14 +55,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#org8671318">index.nix</a></li>
+<li><a href="#org1ebdf37">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#orge2c0bb9">makefile</a></li>
+<li><a href="#orgcc4dcbb">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,11 +77,14 @@
 </div>
 </div>
 
-<div id="outline-container-org8671318" class="outline-2">
-<h2 id="org8671318">index.nix</h2>
-<div class="outline-text-2" id="text-org8671318">
+<div id="outline-container-org1ebdf37" class="outline-2">
+<h2 id="org1ebdf37">index.nix</h2>
+<div class="outline-text-2" id="text-org1ebdf37">
 <div class="org-src-container">
-<pre><code class="language-nix match-braces rainbow-braces">with (import "${(builtins.fetchGit { url = "https://github.com/shadowrylander/shadowrylander"; ref = "main"; })}/etc/nixos").legacyPackages; mkShell {
+<pre><code class="language-nix match-braces rainbow-braces">with builtins; with (fetchGit {
+    url = "https://github.com/shadowrylander/shadowrylander";
+    ref = "";
+}).legacyPackages.${currentSystem}; mkShell {
     buildInputs = [ pythonPackages.bakery yadm git gnumake fd emacs gnupg git-crypt tailscale tailapi pass ];
 }
 </code></pre>
@@ -268,12 +271,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="orgb2aa6cc">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org85bb0de">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org1c199d9">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orgd953ae1">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -402,9 +405,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orge2c0bb9" class="outline-2">
-<h2 id="orge2c0bb9">makefile</h2>
-<div class="outline-text-2" id="text-orge2c0bb9">
+<div id="outline-container-orgcc4dcbb" class="outline-2">
+<h2 id="orgcc4dcbb">makefile</h2>
+<div class="outline-text-2" id="text-orgcc4dcbb">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -434,7 +437,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-12 Sun 19:30</p>
+<p class="date">Created: 2022-06-14 Tue 05:22</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
