--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2022-06-21 Tue 22:04 -->
+<!-- 2022-06-21 Tue 22:29 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -55,14 +55,14 @@
 <div id="text-table-of-contents">
 <ul>
 <li><a href="#b2bb02de-0ced-4df2-a6f5-2734845e163f">CNAME</a></li>
-<li><a href="#org11e5093">index.nix</a></li>
+<li><a href="#org7866c4a">index.nix</a></li>
 <li><a href="#697a3a77-89eb-4408-8cac-a5001e05daa2">index.hy</a></li>
 <li><a href="#f3e32608-7200-4808-9d42-59112f32d395">index.html</a>
 <ul>
 <li><a href="#cca54aae-22bc-4c33-899f-67fa8ec2eb8e">index.sh</a></li>
 </ul>
 </li>
-<li><a href="#orgcb987f8">makefile</a></li>
+<li><a href="#org830d23a">makefile</a></li>
 </ul>
 </div>
 </div>
@@ -77,9 +77,9 @@
 </div>
 </div>
 
-<div id="outline-container-org11e5093" class="outline-2">
-<h2 id="org11e5093">index.nix</h2>
-<div class="outline-text-2" id="text-org11e5093">
+<div id="outline-container-org7866c4a" class="outline-2">
+<h2 id="org7866c4a">index.nix</h2>
+<div class="outline-text-2" id="text-org7866c4a">
 <div class="org-src-container">
 <pre><code class="language-nix match-braces rainbow-braces">with builtins; with (import (fetchGit {
     url = "https://github.com/shadowrylander/shadowrylander";
@@ -99,6 +99,7 @@
 <pre><code class="language-hy match-braces rainbow-braces">#[69509b6b-2e23-4c82-bbe3-0ec2a7dd916e[
 #! nix-shell shell
 #! nix-shell -i hy
+#! nix-shell --option tarbal-ttl 0
 ]69509b6b-2e23-4c82-bbe3-0ec2a7dd916e]
 </code></pre>
 </div>
@@ -271,12 +272,12 @@ Programs necessary for the bootstrap:
 </p>
 
 <div class="org-src-container">
-<pre><code class="language-plaintext match-braces rainbow-braces" id="org631e845">yadm git "make gnumake" fd emacs
+<pre><code class="language-plaintext match-braces rainbow-braces" id="org40c4080">yadm git "make gnumake" fd emacs
 </code></pre>
 </div>
 
 <div class="org-src-container">
-<pre><code class="language-lisp match-braces rainbow-braces" id="org153a20d">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
+<pre><code class="language-lisp match-braces rainbow-braces" id="orge9f67d7">(with-temp-buffer (insert-file-contents "./README.html") (buffer-string))
 </code></pre>
 </div>
 
@@ -405,9 +406,9 @@ fi
 </div>
 </div>
 
-<div id="outline-container-orgcb987f8" class="outline-2">
-<h2 id="orgcb987f8">makefile</h2>
-<div class="outline-text-2" id="text-orgcb987f8">
+<div id="outline-container-org830d23a" class="outline-2">
+<h2 id="org830d23a">makefile</h2>
+<div class="outline-text-2" id="text-org830d23a">
 <div class="org-src-container">
 <pre><code class="language-makefile match-braces rainbow-braces">.RECIPEPREFIX := |
 .DEFAULT_GOAL := super-push
@@ -437,7 +438,7 @@ super-push: et cpush
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: Jeet Ray</p>
-<p class="date">Created: 2022-06-21 Tue 22:04</p>
+<p class="date">Created: 2022-06-21 Tue 22:29</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
